# OpenCamera-Sensors

./: README.md  main.py  pyproject.toml
api_client/: basic_controls.ipynb  basic_example.py  main.py  package-lock.json  remote_gui.py
api_client/data/Test_1/Session_1/: calibration_results_1754096780.pkl  calibration_results_1754097115.pkl
api_client/src/: RemoteControl.py
app/src/main/: AndroidManifest.xml
remote-video-control/: package-lock.json  package.json
remote-video-control/src/: About.js  App.js  Calibration.js  Participants.js  SessionInitialization.js
