[project]
name = "opencamera-sensors"
version = "0.1.0"
description = "A simple front end and back end for the collection of video data from a single camera from an android device"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "absl-py==2.2.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.12",
    "flatbuffers==25.2.10",
    "fonttools==4.58.0",
    "h11==0.16.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "jax==0.4.30",
    "jaxlib==0.4.30",
    "kiwisolver==1.4.7",
    "matplotlib==3.9.4",
    "mediapipe==0.10.21",
    "numpy==1.26.4",
    "opencv-contrib-python==4.11.0.86",
    "opencv-python==4.11.0.86",
    "opt-einsum==3.4.0",
    "packaging==25.0",
    "pathlib==1.0.1",
    "pillow==11.2.1",
    "protobuf==4.25.7",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "requests==2.32.4",
    "scipy==1.13.1",
    "sentencepiece==0.2.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sounddevice==0.5.2",
    "starlette==0.46.2",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvicorn==0.34.2",
    "zipp==3.22.0",
]
